View Issue Details

IDProjectCategoryView StatusLast Update
0033611Open CASCADEOCCT:Data Exchangepublic2024-09-14 21:56
Reporterdpasukhi Assigned Tovglukhik  
PrioritynormalSeveritytrivial 
Status verifiedResolutionfixed 
Target Version7.8.1 
Summary0033611: Data Exchange - Incorrect header guard for STEP property
Description'_RWStepBasic_RWGeneralPropertyRelationship_HeaderFile' is used as a header guard here, followed by #define of a different macro [-Wheader-guard]

src/RWStepBasic/RWStepBasic_RWGeneralPropertyRelationship.hxx
and
src/RWStepBasic/RWStepBasic_RWGeneralPropertyAssociation.hxx
have the same #define
TagsNo tags attached.
Test case number

Activities

git

2024-03-08 18:57

administrator   ~0115291

Branch CR33611 has been created by ichesnokova.

SHA-1: ae7b1090ce3f53536ea26c8167a198ff716f5d71


Detailed log of new commits:

Author: ichesnok
Date: Fri Mar 8 15:56:34 2024 +0000

    0033611: Data Exchange - Incorrect header guard for STEP property
    
    Incorrect header guard fixed.

ichesnokova

2024-03-11 11:31

developer   ~0115299

Dear dpasukhi,
please review branch CR33611

dpasukhi

2024-03-11 18:38

administrator   ~0115314

Dear bugmaster,
please intergrate:
OCCT: CR33611
PROD: No

Tests are not needed

vglukhik

2024-03-18 03:15

administrator   ~0115386

Combination -
OCCT branch : IR-2024-03-15
master SHA - 9d93d9b9b888f8754ea5fa83cd2bbcfb1111bca6
d2ef868da4165400c82322bd7f11b652decce47a
Products branch : master SHA - 4019cd9a039aa9bb8252b865410207f8d4cf3eb4
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Ubuntu2004-64:
OCCT
Total CPU difference: 18392.76999999986 / 18052.86999999987 [+1.88%]
Products
Total CPU difference: 11191.209999999957 / 11393.919999999946 [-1.78%]
Windows-64-VC142:
OCCT
Total CPU difference: 20708.453125 / 20444.125 [+1.29%]
Products
Total CPU difference: 12623.671875 / 12572.140625 [+0.41%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2024-09-14 21:56

administrator   ~0116646

Branch CR33611 has been deleted by dpasukhi.

SHA-1: ae7b1090ce3f53536ea26c8167a198ff716f5d71

Related Changesets

occt: master 993da38d

2024-03-08 15:56:34

ichesnok


Committer: vglukhik Details Diff
0033611: Data Exchange - Incorrect header guard for STEP property

Incorrect header guard fixed.
Affected Issues
0033611
mod - src/RWStepBasic/RWStepBasic_RWGeneralPropertyRelationship.hxx Diff File

Issue History

Date Modified Username Field Change
2024-02-24 18:29 dpasukhi New Issue
2024-02-24 18:29 dpasukhi Assigned To => ichesnokova
2024-03-08 18:57 git Note Added: 0115291
2024-03-11 11:31 ichesnokova Assigned To ichesnokova => dpasukhi
2024-03-11 11:31 ichesnokova Status new => resolved
2024-03-11 11:31 ichesnokova Note Added: 0115299
2024-03-11 18:38 dpasukhi Assigned To dpasukhi => bugmaster
2024-03-11 18:38 dpasukhi Status resolved => reviewed
2024-03-11 18:38 dpasukhi Note Added: 0115314
2024-03-18 03:15 vglukhik Note Added: 0115386
2024-03-18 03:19 vglukhik Changeset attached => occt master 993da38d
2024-03-18 03:19 vglukhik Assigned To bugmaster => vglukhik
2024-03-18 03:19 vglukhik Status reviewed => verified
2024-03-18 03:19 vglukhik Resolution open => fixed
2024-09-14 21:56 git Note Added: 0116646