0033611: Data Exchange - Incorrect header guard for STEP property

Incorrect header guard fixed.